[gd_scene load_steps=6 format=3 uid="uid://byem8ms5765w1"]

[ext_resource type="PackedScene" uid="uid://q6ktqwaigkek" path="res://scenes/player.tscn" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://ddxwsfjjg1htg" path="res://scripts/level.gd" id="1_w7c3h"]
[ext_resource type="Texture2D" uid="uid://dij7ksokgaqco" path="res://assets/kenney/Backgrounds/black.png" id="2_w8frs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8frs"]
size = Vector2(21, 962)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx8sn"]
size = Vector2(539.5, 20)

[node name="Level" type="Node2D"]
script = ExtResource("1_w7c3h")

[node name="Stars" type="Node2D" parent="."]

[node name="Lasers" type="Node2D" parent="."]

[node name="Mobs" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("1_2q6dc")]
position = Vector2(281, 311)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_repeat = 2
texture = ExtResource("2_w8frs")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="Boundaries" type="Node2D" parent="."]
light_mask = 8

[node name="RigidBody2D" type="StaticBody2D" parent="Boundaries"]
light_mask = 8
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RigidBody2D"]
position = Vector2(-10.5, 481)
shape = SubResource("RectangleShape2D_w8frs")

[node name="RigidBody2D2" type="StaticBody2D" parent="Boundaries"]
light_mask = 8
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RigidBody2D2"]
position = Vector2(551, 481)
shape = SubResource("RectangleShape2D_w8frs")

[node name="RigidBody2D3" type="StaticBody2D" parent="Boundaries"]
light_mask = 8
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RigidBody2D3"]
position = Vector2(270.25, -10)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="RigidBody2D4" type="StaticBody2D" parent="Boundaries"]
light_mask = 8
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/RigidBody2D4"]
position = Vector2(270, 970)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="StarsTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="explode" from="Player" to="." method="_on_player_explode"]
[connection signal="shoot_laser" from="Player" to="." method="_on_player_shoot_laser"]
[connection signal="timeout" from="StarsTimer" to="." method="_on_stars_timer_timeout"]
